src/antlr-native/morsecode_native/morsecodeParser.java
// Generated from morsecode.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class morsecodeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DOT=1, DASH=2, SPACE=3, WS=4;
	public static final int
		RULE_morsecode = 0, RULE_letter = 1, RULE_a = 2, RULE_b = 3, RULE_c = 4, 
		RULE_d = 5, RULE_e = 6, RULE_f = 7, RULE_g = 8, RULE_h = 9, RULE_i = 10, 
		RULE_j = 11, RULE_k = 12, RULE_l = 13, RULE_m = 14, RULE_n = 15, RULE_o = 16, 
		RULE_p = 17, RULE_q = 18, RULE_r = 19, RULE_s = 20, RULE_t = 21, RULE_u = 22, 
		RULE_v = 23, RULE_w = 24, RULE_x = 25, RULE_y = 26, RULE_z = 27, RULE_one = 28, 
		RULE_two = 29, RULE_three = 30, RULE_four = 31, RULE_five = 32, RULE_six = 33, 
		RULE_seven = 34, RULE_eight = 35, RULE_nine = 36, RULE_zero = 37;
	public static final String[] ruleNames = {
		"morsecode", "letter", "a", "b", "c", "d", "e", "f", "g", "h", "i", "j", 
		"k", "l", "m", "n", "o", "p", "q", "r", "s", "t", "u", "v", "w", "x", 
		"y", "z", "one", "two", "three", "four", "five", "six", "seven", "eight", 
		"nine", "zero"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'.'", "'-'", "' '"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "DOT", "DASH", "SPACE", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "morsecode.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public morsecodeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MorsecodeContext extends ParserRuleContext {
		public List<LetterContext> letter() {
			return getRuleContexts(LetterContext.class);
		}
		public LetterContext letter(int i) {
			return getRuleContext(LetterContext.class,i);
		}
		public List<TerminalNode> SPACE() { return getTokens(morsecodeParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(morsecodeParser.SPACE, i);
		}
		public MorsecodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_morsecode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).enterMorsecode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).exitMorsecode(this);
		}
	}

	public final MorsecodeContext morsecode() throws RecognitionException {
		MorsecodeContext _localctx = new MorsecodeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_morsecode);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			letter();
			setState(79); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(77);
				match(SPACE);
				setState(78);
				letter();
				}
				}
				setState(81); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SPACE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LetterContext extends ParserRuleContext {
		public AContext a() {
			return getRuleContext(AContext.class,0);
		}
		public BContext b() {
			return getRuleContext(BContext.class,0);
		}
		public CContext c() {
			return getRuleContext(CContext.class,0);
		}
		public DContext d() {
			return getRuleContext(DContext.class,0);
		}
		public EContext e() {
			return getRuleContext(EContext.class,0);
		}
		public FContext f() {
			return getRuleContext(FContext.class,0);
		}
		public GContext g() {
			return getRuleContext(GContext.class,0);
		}
		public HContext h() {
			return getRuleContext(HContext.class,0);
		}
		public IContext i() {
			return getRuleContext(IContext.class,0);
		}
		public JContext j() {
			return getRuleContext(JContext.class,0);
		}
		public KContext k() {
			return getRuleContext(KContext.class,0);
		}
		public LContext l() {
			return getRuleContext(LContext.class,0);
		}
		public MContext m() {
			return getRuleContext(MContext.class,0);
		}
		public NContext n() {
			return getRuleContext(NContext.class,0);
		}
		public OContext o() {
			return getRuleContext(OContext.class,0);
		}
		public PContext p() {
			return getRuleContext(PContext.class,0);
		}
		public QContext q() {
			return getRuleContext(QContext.class,0);
		}
		public RContext r() {
			return getRuleContext(RContext.class,0);
		}
		public SContext s() {
			return getRuleContext(SContext.class,0);
		}
		public TContext t() {
			return getRuleContext(TContext.class,0);
		}
		public UContext u() {
			return getRuleContext(UContext.class,0);
		}
		public VContext v() {
			return getRuleContext(VContext.class,0);
		}
		public WContext w() {
			return getRuleContext(WContext.class,0);
		}
		public XContext x() {
			return getRuleContext(XContext.class,0);
		}
		public YContext y() {
			return getRuleContext(YContext.class,0);
		}
		public ZContext z() {
			return getRuleContext(ZContext.class,0);
		}
		public OneContext one() {
			return getRuleContext(OneContext.class,0);
		}
		public TwoContext two() {
			return getRuleContext(TwoContext.class,0);
		}
		public ThreeContext three() {
			return getRuleContext(ThreeContext.class,0);
		}
		public FourContext four() {
			return getRuleContext(FourContext.class,0);
		}
		public FiveContext five() {
			return getRuleContext(FiveContext.class,0);
		}
		public SixContext six() {
			return getRuleContext(SixContext.class,0);
		}
		public SevenContext seven() {
			return getRuleContext(SevenContext.class,0);
		}
		public EightContext eight() {
			return getRuleContext(EightContext.class,0);
		}
		public NineContext nine() {
			return getRuleContext(NineContext.class,0);
		}
		public ZeroContext zero() {
			return getRuleContext(ZeroContext.class,0);
		}
		public LetterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_letter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).enterLetter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).exitLetter(this);
		}
	}

	public final LetterContext letter() throws RecognitionException {
		LetterContext _localctx = new LetterContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_letter);
		try {
			setState(119);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				a();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				b();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(85);
				c();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(86);
				d();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(87);
				e();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(88);
				f();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(89);
				g();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(90);
				h();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(91);
				i();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(92);
				j();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(93);
				k();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(94);
				l();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(95);
				m();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(96);
				n();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(97);
				o();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(98);
				p();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(99);
				q();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(100);
				r();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(101);
				s();
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(102);
				t();
				}
				break;
			case 21:
				enterOuterAlt(_localctx, 21);
				{
				setState(103);
				u();
				}
				break;
			case 22:
				enterOuterAlt(_localctx, 22);
				{
				setState(104);
				v();
				}
				break;
			case 23:
				enterOuterAlt(_localctx, 23);
				{
				setState(105);
				w();
				}
				break;
			case 24:
				enterOuterAlt(_localctx, 24);
				{
				setState(106);
				x();
				}
				break;
			case 25:
				enterOuterAlt(_localctx, 25);
				{
				setState(107);
				y();
				}
				break;
			case 26:
				enterOuterAlt(_localctx, 26);
				{
				setState(108);
				z();
				}
				break;
			case 27:
				enterOuterAlt(_localctx, 27);
				{
				setState(109);
				one();
				}
				break;
			case 28:
				enterOuterAlt(_localctx, 28);
				{
				setState(110);
				two();
				}
				break;
			case 29:
				enterOuterAlt(_localctx, 29);
				{
				setState(111);
				three();
				}
				break;
			case 30:
				enterOuterAlt(_localctx, 30);
				{
				setState(112);
				four();
				}
				break;
			case 31:
				enterOuterAlt(_localctx, 31);
				{
				setState(113);
				five();
				}
				break;
			case 32:
				enterOuterAlt(_localctx, 32);
				{
				setState(114);
				six();
				}
				break;
			case 33:
				enterOuterAlt(_localctx, 33);
				{
				setState(115);
				seven();
				}
				break;
			case 34:
				enterOuterAlt(_localctx, 34);
				{
				setState(116);
				eight();
				}
				break;
			case 35:
				enterOuterAlt(_localctx, 35);
				{
				setState(117);
				nine();
				}
				break;
			case 36:
				enterOuterAlt(_localctx, 36);
				{
				setState(118);
				zero();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(morsecodeParser.DOT, 0); }
		public TerminalNode DASH() { return getToken(morsecodeParser.DASH, 0); }
		public AContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_a; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).enterA(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).exitA(this);
		}
	}

	public final AContext a() throws RecognitionException {
		AContext _localctx = new AContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_a);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(DOT);
			setState(122);
			match(DASH);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BContext extends ParserRuleContext {
		public TerminalNode DASH() { return getToken(morsecodeParser.DASH, 0); }
		public List<TerminalNode> DOT() { return getTokens(morsecodeParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(morsecodeParser.DOT, i);
		}
		public BContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_b; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).enterB(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).exitB(this);
		}
	}

	public final BContext b() throws RecognitionException {
		BContext _localctx = new BContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_b);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(DASH);
			setState(125);
			match(DOT);
			setState(126);
			match(DOT);
			setState(127);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CContext extends ParserRuleContext {
		public List<TerminalNode> DASH() { return getTokens(morsecodeParser.DASH); }
		public TerminalNode DASH(int i) {
			return getToken(morsecodeParser.DASH, i);
		}
		public List<TerminalNode> DOT() { return getTokens(morsecodeParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(morsecodeParser.DOT, i);
		}
		public CContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).enterC(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).exitC(this);
		}
	}

	public final CContext c() throws RecognitionException {
		CContext _localctx = new CContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_c);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(DASH);
			setState(130);
			match(DOT);
			setState(131);
			match(DASH);
			setState(132);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DContext extends ParserRuleContext {
		public TerminalNode DASH() { return getToken(morsecodeParser.DASH, 0); }
		public List<TerminalNode> DOT() { return getTokens(morsecodeParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(morsecodeParser.DOT, i);
		}
		public DContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_d; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).enterD(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).exitD(this);
		}
	}

	public final DContext d() throws RecognitionException {
		DContext _localctx = new DContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_d);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(DASH);
			setState(135);
			match(DOT);
			setState(136);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(morsecodeParser.DOT, 0); }
		public EContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_e; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).enterE(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).exitE(this);
		}
	}

	public final EContext e() throws RecognitionException {
		EContext _localctx = new EContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_e);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FContext extends ParserRuleContext {
		public List<TerminalNode> DOT() { return getTokens(morsecodeParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(morsecodeParser.DOT, i);
		}
		public TerminalNode DASH() { return getToken(morsecodeParser.DASH, 0); }
		public FContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_f; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).enterF(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).exitF(this);
		}
	}

	public final FContext f() throws RecognitionException {
		FContext _localctx = new FContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_f);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(DOT);
			setState(141);
			match(DOT);
			setState(142);
			match(DASH);
			setState(143);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GContext extends ParserRuleContext {
		public List<TerminalNode> DASH() { return getTokens(morsecodeParser.DASH); }
		public TerminalNode DASH(int i) {
			return getToken(morsecodeParser.DASH, i);
		}
		public TerminalNode DOT() { return getToken(morsecodeParser.DOT, 0); }
		public GContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_g; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).enterG(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).exitG(this);
		}
	}

	public final GContext g() throws RecognitionException {
		GContext _localctx = new GContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_g);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(DASH);
			setState(146);
			match(DASH);
			setState(147);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HContext extends ParserRuleContext {
		public List<TerminalNode> DOT() { return getTokens(morsecodeParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(morsecodeParser.DOT, i);
		}
		public HContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_h; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).enterH(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).exitH(this);
		}
	}

	public final HContext h() throws RecognitionException {
		HContext _localctx = new HContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_h);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(DOT);
			setState(150);
			match(DOT);
			setState(151);
			match(DOT);
			setState(152);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IContext extends ParserRuleContext {
		public List<TerminalNode> DOT() { return getTokens(morsecodeParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(morsecodeParser.DOT, i);
		}
		public IContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_i; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).enterI(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).exitI(this);
		}
	}

	public final IContext i() throws RecognitionException {
		IContext _localctx = new IContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_i);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(DOT);
			setState(155);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(morsecodeParser.DOT, 0); }
		public List<TerminalNode> DASH() { return getTokens(morsecodeParser.DASH); }
		public TerminalNode DASH(int i) {
			return getToken(morsecodeParser.DASH, i);
		}
		public JContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_j; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).enterJ(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).exitJ(this);
		}
	}

	public final JContext j() throws RecognitionException {
		JContext _localctx = new JContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_j);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(DOT);
			setState(158);
			match(DASH);
			setState(159);
			match(DASH);
			setState(160);
			match(DASH);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KContext extends ParserRuleContext {
		public List<TerminalNode> DASH() { return getTokens(morsecodeParser.DASH); }
		public TerminalNode DASH(int i) {
			return getToken(morsecodeParser.DASH, i);
		}
		public TerminalNode DOT() { return getToken(morsecodeParser.DOT, 0); }
		public KContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_k; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).enterK(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).exitK(this);
		}
	}

	public final KContext k() throws RecognitionException {
		KContext _localctx = new KContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_k);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(DASH);
			setState(163);
			match(DOT);
			setState(164);
			match(DASH);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LContext extends ParserRuleContext {
		public List<TerminalNode> DOT() { return getTokens(morsecodeParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(morsecodeParser.DOT, i);
		}
		public TerminalNode DASH() { return getToken(morsecodeParser.DASH, 0); }
		public LContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_l; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).enterL(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).exitL(this);
		}
	}

	public final LContext l() throws RecognitionException {
		LContext _localctx = new LContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_l);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			match(DOT);
			setState(167);
			match(DASH);
			setState(168);
			match(DOT);
			setState(169);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MContext extends ParserRuleContext {
		public List<TerminalNode> DASH() { return getTokens(morsecodeParser.DASH); }
		public TerminalNode DASH(int i) {
			return getToken(morsecodeParser.DASH, i);
		}
		public MContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_m; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).enterM(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).exitM(this);
		}
	}

	public final MContext m() throws RecognitionException {
		MContext _localctx = new MContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_m);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			match(DASH);
			setState(172);
			match(DASH);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NContext extends ParserRuleContext {
		public TerminalNode DASH() { return getToken(morsecodeParser.DASH, 0); }
		public TerminalNode DOT() { return getToken(morsecodeParser.DOT, 0); }
		public NContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_n; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).enterN(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).exitN(this);
		}
	}

	public final NContext n() throws RecognitionException {
		NContext _localctx = new NContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_n);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			match(DASH);
			setState(175);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OContext extends ParserRuleContext {
		public List<TerminalNode> DASH() { return getTokens(morsecodeParser.DASH); }
		public TerminalNode DASH(int i) {
			return getToken(morsecodeParser.DASH, i);
		}
		public OContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_o; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).enterO(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof morsecodeListener ) ((morsecodeListener)listener).exitO(this);
		}
	}

	public final OContext o() throws RecognitionException {
		OContext _localctx = new OContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_o);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			match(DASH);
			setState(178);
			match(DASH);
			setState(179);
			match(DASH);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
